tests/errors/source/short_unfinished_identifier_list.rs
use duplicate::*;
#[duplicate_item(
	ident1 ident2
)]//duplicate_end
pub struct name(ty);
//item_end
